@@ -28,7 +28,7 @@ public class CookiesInInterceptor extends AbstractPhaseInterceptor {
 		Map<String, List> headers = (Map<String, List>) message.get(PROTOCOL_HEADERS);
 		List<Cookie> cookies = headers.get("Set-Cookie");
 		if (cookies != null) {
-			CookieStore.setCookie(cookies.get(0));
+			CookieStore.setCookie(cookies.getFirst());
 		}
 	}
 
